Use MdsIpShr instead of MdsIpUtil with mdsip connections

--- a/mdslib/Makefile.in
+++ b/mdslib/Makefile.in
@@ -19,6 +19,12 @@ CFLAGS = $(GLOBUS_CFLAGS) $(GLOBUS_INCLUDES) -I$(top_srcdir)/include
 LDFLAGS = $(GLOBUS_LDFLAGS) $(GLOBUS_LIBS) $(GLOBUS_PKG_LIBS) --allow-multiple-definition
 endif
 
+ifeq "@MDSIP_CONNECTIONS@" "yes"
+MdsIpUtil="MdsIpShr"
+else
+MdsIpUtil="MdsIpUtil"
+endif
+
 SOURCES = MdsLib.c
 OBJECTS = $(SOURCES:.c=.o) 
 EXPORTS = MdsLib.export
@@ -61,14 +67,14 @@ install:
 	mkdir @MAKEBINDIR@
 
 @MAKESHLIBDIR@libMdsLib@SHARETYPE@ : $(OBJECTS)
-	$(LD) -o $@ @LINKSHARED@ $(LDFLAGS) $(OBJECTS) -L@MAKELIBDIR@ -lMdsIpUtil -L@MAKESHLIBDIR@ $(MDSLIB_LIBS) $(LIBS) @MEMCHKLIB@ $(GLOBUS_LDFLAGS) $(GLOBUS_LIBS) $(GLOBUS_PKG_LIBS) @GCCLIB@
+	$(LD) -o $@ @LINKSHARED@ $(LDFLAGS) $(OBJECTS) -L@MAKELIBDIR@ -l$(MdsIpUtil) -L@MAKESHLIBDIR@ $(MDSLIB_LIBS) $(LIBS) @MEMCHKLIB@ $(GLOBUS_LDFLAGS) $(GLOBUS_LIBS) $(GLOBUS_PKG_LIBS) @GCCLIB@
 
 @MAKELIBDIR@libMdsLib.a : $(OBJECTS)
 	$(AR) -cr $@ $(OBJECTS)
 	@RANLIB@ $@
 
 @MAKESHLIBDIR@libMdsLib_client@SHARETYPE@ : $(OBJECTS_CLIENT)
-	$(LD) -o $@ @LINKSHARED@ $(LDFLAGS) $(OBJECTS_CLIENT) -L@MAKELIBDIR@ -lMdsIpUtil $(LIBS) @MEMCHKLIB@  $(GLOBUS_LDFLAGS) $(GLOBUS_LIBS) $(GLOBUS_PKG_LIBS)
+	$(LD) -o $@ @LINKSHARED@ $(LDFLAGS) $(OBJECTS_CLIENT) -L@MAKELIBDIR@ -l$(MdsIpUtil) $(LIBS) @MEMCHKLIB@  $(GLOBUS_LDFLAGS) $(GLOBUS_LIBS) $(GLOBUS_PKG_LIBS)
 
 @MAKELIBDIR@libMdsLib_client.a : $(OBJECTS_CLIENT) $(OBJECTS_CLIENT_ARCHIVE)
 	$(AR) -cr $@ $(OBJECTS_CLIENT) $(OBJECTS_CLIENT_ARCHIVE)
