--- a/mdstcpip/Makefile.in
+++ b/mdstcpip/Makefile.in
@@ -30,13 +30,13 @@ LIB_SOURCES = MdsValue.c MdsPut.c MdsOpen.c MdsClose.c MdsSetDefault.c MdsLogin.
 	  IdlApi.c SendMdsMsg.c GetMdsMsg.c FlipData.c FlipHeader.c GetAnswerInfo.c ClientType.c\
           MakeDescrip.c LoadIo.c vmshpwd.c ArgLen.c GetSetSettings.c DoMessage.c  \
 	  LockAsts.c Connections.c MdsIpFree.c SendArg.c ConnectToMds.c DisconnectFromMds.c CloseConnection.c \
-	 CheckClient.c
+	 CheckClient.c ParseCommand.c
 
 LIB_OBJECTS = $(LIB_SOURCES:.c=.o)
 
 SERVER_LIB_SOURCES = ProcessMessage.c RemoveConnection.c 
 SERVER_LIB_OBJECTS = $(SERVER_LIB_SOURCES:.c=.o)
-SERVER_SOURCES = mdsip.c ParseCommand.c 
+SERVER_SOURCES = mdsip.c 
 SERVER_OBJECTS = $(SERVER_SOURCES:.c=.o)
 TCP_SOURCES = IoRoutinesTcp.c
 TCP_OBJECTS = $(TCP_SOURCES:.c=.o)
@@ -57,6 +57,7 @@ MdsIpGSI = @MAKESHLIBDIR@libMdsIpGSI@SHARETYPE@
 ALL_SOURCES = $(ALL_SOURCES) $(GSI_SOURCES)
 CLEAN_OBJECTS = $(COMPRESSION_OBJECTS) $(LIB_OBJECTS) $(TUNNEL_OBJECTS) $(TCP_OBJECTS) $(SERVER_LIB_OBJECTS) $(SERVER_OBJECTS) IoRoutinesGsi.o makefile-header
 MAKEFILE_HEADER = makefile-header
+MDSIPSD = @MAKEBINDIR@mdsipsd
 
 endif
 
@@ -86,6 +87,7 @@ all : $(MAKEFILE_HEADER) \
       $(MdsIpSSH) \
       $(MDSIP_CLIENT_SSH) \
       $(MDSIP_SERVER_SSH) \
+      $(MDSIPSD) \
       @MAKEBINDIR@ @MAKELIBDIR@ @MAKEETCDIR@ \
       @MAKEBINDIR@mdsiptest \
       @MAKEBINDIR@mdsip \
@@ -120,6 +122,7 @@ clean :
 	@ $(RM) @MAKEBINDIR@mdsip-server-ssh
         ifdef MdsIpGSI
 	@ $(RM) $(MdsIpGSI)
+	@ $(RM) $(MDSIPSD)
         endif
         endif
 
@@ -158,6 +161,7 @@ endif
 		$(INSTALL) -m 755 @MAKEBINDIR@mdsip-server-ssh @bindir@
           ifdef MdsIpGSI
 		$(INSTALL) -m 755 @MAKESHLIBDIR@libMdsIpGSI@SHARETYPE@ @libdir@
+		$(INSTALL) -m 755 @MAKEBINDDIR@mdsipd @bindir@
           endif
         endif
 
@@ -241,4 +245,6 @@ include makefile-header
 $(MdsIpGSI) :  IoRoutinesGsi.c
 	$(GLOBUS_CC) -o $@ IoRoutinesGsi.c @CFLAGS@ $(GLOBUS_CFLAGS) $(GLOBUS_INCLUDES) -I$(top_srcdir)/include  @LINKSHARED@ $(GLOBUS_LDFLAGS) $(GLOBUS_LIBS) $(GLOBUS_PKG_LIBS) -L@MAKESHLIBDIR@ -lMdsIpShr
 
+@MAKEBINDIR@mdsipsd : mdsipsd
+	cp mdsipd $@
 endif
