Latest fixes for new mdsip

--- a/mdstcpip/mdsipshr-new.vcproj
+++ b/mdstcpip/mdsipshr-new.vcproj
@@ -541,6 +541,10 @@
 			>
 		</File>
 		<File
+			RelativePath=".\ParseCommand.c"
+			>
+		</File>
+		<File
 			RelativePath=".\SendArg.c"
 			>
 		</File>
