--- a/configure.in
+++ b/configure.in
@@ -23,6 +23,7 @@ fi
 
 dnl Check out the compiler
 AC_PROG_CC
+AC_PROG_CXX
 
 AC_ARG_ENABLE(mdsip_connections,
         [ --enable-mdsip_connections     Use new improved mdsip connections],
