Fix icon location

--- a/desktop/kernel/mdstcl.desktop
+++ b/desktop/kernel/mdstcl.desktop
@@ -4,7 +4,7 @@ Encoding=UTF-8
 Name=TCL
 Type=Application
 Exec=mdstcl
-Icon=/usr/local/mdsplus/pixmaps/Tcl.png
+Icon=$MDSPLUS_DIR/pixmaps/Tcl.png
 X-GNOME-DocPath=
 Terminal=true
 Name[en_US]=TCL
