--- a/desktop/motif/dwpad.desktop
+++ b/desktop/motif/dwpad.desktop
@@ -4,7 +4,7 @@ Encoding=UTF-8
 Name=Dwpad
 Type=Application
 Exec=dwpad
-Icon=/usr/local/mdsplus/pixmaps/dwpad.png
+Icon=$MDSPLUS_DIR/pixmaps/dwpad.png
 X-GNOME-DocPath=
 Terminal=false
 Name[en_US]=dwpad
