--- a/desktop/java/jscope.desktop
+++ b/desktop/java/jscope.desktop
@@ -3,7 +3,7 @@ Encoding=UTF-8
 Name=jScope
 Comment=MDSplus JAVA based plotting application
 Exec=jScope
-Icon=/usr/local/mdsplus/pixmaps/dwscope.png
+Icon=$MDSPLUS_DIR/pixmaps/dwscope.png
 Terminal=false
 Type=Application
 Categories=GNOME;Application;MDSplus;X-Red-Hat-Base;
