--- a/desktop/java/jtraverser.desktop
+++ b/desktop/java/jtraverser.desktop
@@ -3,7 +3,7 @@ Encoding=UTF-8
 Name=jScope
 Comment=MDSplus JAVA based MDSplus Tree Manipulation application
 Exec=jTraverser
-Icon=/usr/local/mdsplus/pixmaps/traverser.png
+Icon=$MDSPLUS_DIR/pixmaps/traverser.png
 Terminal=false
 Type=Application
 Categories=GNOME;Application;MDSplus;X-Red-Hat-Base;
