--- a/desktop/kernel/tdic.desktop
+++ b/desktop/kernel/tdic.desktop
@@ -4,7 +4,7 @@ Encoding=UTF-8
 Name=TDIC
 Type=Application
 Exec=tdic
-Icon=/usr/local/mdsplus/pixmaps/Tdi.png
+Icon=$MDSPLUS_DIR/pixmaps/Tdi.png
 X-GNOME-DocPath=
 Terminal=true
 Name[en_US]=TDIC
