--- a/desktop/motif/dwscope.desktop
+++ b/desktop/motif/dwscope.desktop
@@ -3,7 +3,7 @@ Encoding=UTF-8
 Name=Dwscope
 Comment=MDSplus plotting application
 Exec=dwscope
-Icon=/usr/local/mdsplus/pixmaps/dwscope.png
+Icon=$MDSPLUS_DIR/pixmaps/dwscope.png
 Terminal=false
 Type=Application
 Categories=GNOME;Application;MDSplus;X-Red-Hat-Base;
