--- a/desktop/motif/traverser.desktop
+++ b/desktop/motif/traverser.desktop
@@ -4,7 +4,7 @@ Encoding=UTF-8
 Name=Traverser
 Type=Application
 Exec=traverser
-Icon=/usr/local/mdsplus/pixmaps/traverser.png
+Icon=$MDSPLUS_DIR/pixmaps/traverser.png
 X-GNOME-DocPath=
 Terminal=false
 Name[en_US]=traverser
