Add Laser_yag setup

--- a/javadevices/javadevices.vcproj
+++ b/javadevices/javadevices.vcproj
@@ -598,6 +598,10 @@
 			>
 		</File>
 		<File
+			RelativePath=".\LASER_RUSetup.java"
+			>
+		</File>
+		<File
 			RelativePath="MPBDecoderSetup.java"
 			>
 		</File>
