--- a/tdi/MitDevices/acq_inetd.conf
+++ b/tdi/MitDevices/acq_inetd.conf
@@ -1,3 +1,4 @@
 54545 stream tcp nowait root /usr/local/bin/get.State
 54546 stream tcp nowait root /usr/local/bin/doInit.sh
 54547 stream tcp nowait root /usr/local/bin/sendFile   
+54548 stream tcp nowait root /usr/local/bin/acq.ao.zero   
