--- a/roam/Makefile.in
+++ b/roam/Makefile.in
@@ -64,7 +64,7 @@ install:
 	fi;
 
 @MAKESHLIBDIR@libRoam_@GLOBUS_FLAVOR@@SHARETYPE@ : $(OBJECTS)
-	$(GLOBUS_LD) -o $@ @LINKSHARED@ $(OBJECTS) $(LDFLAGS)
+	$(GLOBUS_CC) -o $@ @LINKSHARED@ $(OBJECTS) $(CFLAGS) $(LDFLAGS)
 
 @MAKESHLIBDIR@libRoam@SHARETYPE@ :
 	ln -sf libRoam_@GLOBUS_FLAVOR@@SHARETYPE@ @MAKESHLIBDIR@libRoam@SHARETYPE@
