--- a/hdf5/Makefile.in
+++ b/hdf5/Makefile.in
@@ -5,7 +5,7 @@ prefix=@prefix@
 top_srcdir=@top_srcdir@
 exec_prefix=@exec_prefix@
 RM=$(top_srcdir)/devscripts/rm_if
-CFLAGS=@CFLAGS@ @HDF5_INCS@ -I.
+CFLAGS=@CFLAGS@ @HDF5_INCS@ -I.  -DH5_USE_16_API
 LDFLAGS=@LDFLAGS@
 LIBS=-L@MAKESHLIBDIR@ -lTdiShr -lTreeShr -lMdsShr @HDF5_LIBS@ -lhdf5 @LIBS@
 INSTALL=@top_srcdir@/conf/install-sh -c
