--- a/javadevices/Makefile.in
+++ b/javadevices/Makefile.in
@@ -124,7 +124,8 @@ CAENDT5720Setup.java\
 RFXVConfigSetup.java\
 MARTESetup.java\
 LASER_SSSetup.java\
-SPIDER_SMSetup.java
+SPIDER_SMSetup.java\
+ZELOS2150GVSetup.java
 
 all: @MAKEJAVADIR@ @MAKEJAVADIR@classes \
      @MAKEJAVADIR@classes/jDevices.jar
