*** empty log message ***

--- a/javadevices/Makefile.in
+++ b/javadevices/Makefile.in
@@ -123,7 +123,7 @@ FEMTOSetup.java\
 CAENDT5720Setup.java\
 RFXVConfigSetup.java\
 MARTESetup.java\
-LASER_SSSetup.java\
+LASER_YAGSetup.java\
 SPIDER_SMSetup.java\
 ZELOS2150GVSetup.java
 
