J221 renamed to J221RFX

--- a/javadevices/Makefile.in
+++ b/javadevices/Makefile.in
@@ -62,7 +62,7 @@ RFXMOPSetup.java \
 RFXANSALDOSetup.java \
 IPC901Setup.java \
 CADHSetup.java \
-J221Setup.java \
+J221RFXSetup.java \
 L6810Setup.java \
 RFXVISetupSetup.java \
 RFXVIConfigSetup.java \
