Add NI6259 ADC device

--- a/javadevices/Makefile.in
+++ b/javadevices/Makefile.in
@@ -125,7 +125,8 @@ RFXVConfigSetup.java\
 MARTESetup.java\
 LASER_YAGSetup.java\
 SPIDER_SMSetup.java\
-ZELOS2150GVSetup.java
+ZELOS2150GVSetup.java\
+NI6259AISetup.java
 
 all: @MAKEJAVADIR@ @MAKEJAVADIR@classes \
      @MAKEJAVADIR@classes/jDevices.jar
