--- a/hdf5/Makefile.in
+++ b/hdf5/Makefile.in
@@ -7,7 +7,7 @@ exec_prefix=@exec_prefix@
 RM=$(top_srcdir)/devscripts/rm_if
 CFLAGS=@CFLAGS@ @HDF5_INCS@ -I.  -DH5_USE_16_API
 LDFLAGS=@LDFLAGS@
-LIBS=-L@MAKESHLIBDIR@ -lTdiShr -lTreeShr -lMdsShr @HDF5_LIBS@ -Bstatic -static -lhdf5 -Bdynamic -shared @LIBS@
+LIBS=-L@MAKESHLIBDIR@ -lTdiShr -lTreeShr -lMdsShr @HDF5_LIBS@ -lhdf5 @LIBS@
 INSTALL=@top_srcdir@/conf/install-sh -c
 
 SOURCES = \
