--- a/javadevices/Makefile.in
+++ b/javadevices/Makefile.in
@@ -127,7 +127,8 @@ LASER_YAGSetup.java\
 SPIDER_SMSetup.java\
 SPIDERSetup.java\
 ZELOS2150GVSetup.java\
-NI6259AISetup.java
+NI6259AISetup.java\
+FAKECAMERASetup.java
 
 all: @MAKEJAVADIR@ @MAKEJAVADIR@classes \
      @MAKEJAVADIR@classes/jDevices.jar
