Ignore some directories

--- a/.cvsignore
+++ b/.cvsignore
@@ -1,11 +1,16 @@
-bin64
-lib64
 bin32
+bin64
 lib32
+lib64
 uid32
 uid64
 java
 Win32
 x64
-
-autom4te.cache
+usr
+Makefile
+BUILDROOT
+DEBS
+EGGS
+SOURCES
+debian
