--- a/javadevices/Makefile.in
+++ b/javadevices/Makefile.in
@@ -124,6 +124,7 @@ CAENDT5720Setup.java\
 RFXVConfigSetup.java\
 MARTESetup.java\
 MARTE_MHD_BRSetup.java\
+MARTE_MHD_ISetup.java\
 LASER_YAGSetup.java\
 SPIDER_SMSetup.java\
 SPIDERSetup.java\
