Fix debug build settings

--- a/mdstcpip/mdsip-new.vcproj
+++ b/mdstcpip/mdsip-new.vcproj
@@ -318,6 +318,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="wsock32.lib"
+				OutputFile="$(OutDir)\mdsip.exe"
 				LinkIncremental="2"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(IntDir)/mdsip.pdb"
