--- a/javadevices/Makefile.in
+++ b/javadevices/Makefile.in
@@ -125,6 +125,7 @@ RFXVConfigSetup.java\
 MARTESetup.java\
 MARTE_MHD_BRSetup.java\
 MARTE_MHD_ISetup.java\
+MARTE_MHD_BTSetup.java\
 LASER_YAGSetup.java\
 SPIDER_SMSetup.java\
 SPIDERSetup.java\
