--- a/mdstcpip/Makefile.in
+++ b/mdstcpip/Makefile.in
@@ -187,10 +187,10 @@ endif
 
 ifdef MDSIP_CONNECTIONS
 @MAKESHLIBDIR@libMdsIpShr@SHARETYPE@ : $(LIB_OBJECTS) $(COMPRESSION_OBJECTS)
-	$(LD) -o $@ @LINKSHARED@ $(LIB_OBJECTS) $(COMPRESSION_OBJECTS) -L@MAKESHLIBDIR@ -lMdsShr $(LIBS) 
+	$(LD) -o $@ @LINKSHARED@ $(LIB_OBJECTS) $(COMPRESSION_OBJECTS) -L@MAKESHLIBDIR@ -lMdsShr $(LIBS) $(LDFLAGS)
 else
 @MAKESHLIBDIR@libMdsIpShr@SHARETYPE@ : $(LIB_OBJECTS) $(COMPRESSION_OBJECTS)
-	$(LD) -o $@ @LINKSHARED@ $(LIB_OBJECTS) $(COMPRESSION_OBJECTS) $(LIBS) 
+	$(LD) -o $@ @LINKSHARED@ $(LIB_OBJECTS) $(COMPRESSION_OBJECTS) $(LIBS) $LDFLAGS) 
 endif
 @MAKELIBDIR@libMdsIpShr.a : $(LIB_OBJECTS)
 	$(AR) -cr $@ $(LIB_OBJECTS)
@@ -198,7 +198,7 @@ endif
 
 ifdef modules
 @MAKESHLIBDIR@libMdsIpShr@SHARETYPEMOD@ : $(LIB_OBJECTS) $(COMPRESSION_OBJECTS)
-	$(LD) -o $@ @LINKMODULE@ $(OBJECTS) $(LIBS) 
+	$(LD) -o $@ @LINKMODULE@ $(OBJECTS) $(LIBS) $(LDFLAGS)
 endif
 
 $(MDSIP_UTIL) : mdsiputil.o mdsip_socket_io.o mdsip_parallel.o $(COMPRESSION_OBJECTS)
@@ -218,13 +218,13 @@ $(MDSIP_UTIL) : mdsiputil.o mdsip_socket_io.o mdsip_parallel.o $(COMPRESSION_OBJ
 	cp mkdirhier @MAKEBINDIR@mkdirhier
 
 @MAKESHLIBDIR@libMdsIpSrvShr@SHARETYPE@ : $(SERVER_LIB_OBJECTS)
-	$(LD) -o $@ @LINKSHARED@ $(SERVER_LIB_OBJECTS) -L@MAKESHLIBDIR@ -lMdsIpShr -lMdsShr -lTreeShr -lTdiShr $(LIBS)
+	$(LD) -o $@ @LINKSHARED@ $(SERVER_LIB_OBJECTS) -L@MAKESHLIBDIR@ -lMdsIpShr -lMdsShr -lTreeShr -lTdiShr $(LIBS) $(LDFLAGS)
 
 @MAKESHLIBDIR@libMdsIpTunnel@SHARETYPE@ : $(TUNNEL_OBJECTS)
-	$(LD) -o $@ @LINKSHARED@ $(TUNNEL_OBJECTS) -L@MAKESHLIBDIR@ -lMdsIpShr $(LIBS)
+	$(LD) -o $@ @LINKSHARED@ $(TUNNEL_OBJECTS) -L@MAKESHLIBDIR@ -lMdsIpShr $(LIBS) $(LDFLAGS)
 
 @MAKESHLIBDIR@libMdsIpTCP@SHARETYPE@ : $(TCP_OBJECTS)
-	$(LD) -o $@ @LINKSHARED@ $(TCP_OBJECTS) -L@MAKESHLIBDIR@ -lMdsIpShr $(LIBS)
+	$(LD) -o $@ @LINKSHARED@ $(TCP_OBJECTS) -L@MAKESHLIBDIR@ -lMdsIpShr $(LIBS) $(LDFLAGS)
 
 @MAKESHLIBDIR@libMdsIpSSH@SHARETYPE@ :
 	ln -sf libMdsIpTunnel@SHARETYPE@ $@
