--- a/configure.in
+++ b/configure.in
@@ -5,7 +5,10 @@ AC_INIT()
 #AC_CONFIG_HEADER(include/config.h)
 AC_CONFIG_AUX_DIR(conf)
 AC_CANONICAL_SYSTEM
-
+AC_CHECK_SIZEOF(int *)
+SIZEOF_INT_P=$ac_cv_sizeof_int_p
+AC_CHECK_LIB(socket,socket,SOCKETLIB="-l socket",SOCKELIB="")
+AC_CHECK_LIB(nsl,inet_addr,NSLLIB="-l nsl",NSLLIB="")
 dnl See if we need to use native compilers
 case "$target" in
 alpha-dec-osf*) : ${CC=cc};
@@ -67,7 +70,7 @@ then
 else
 	GEN_DEVICE=""
 	REMCAM=""
-	CCL="ccl"
+	CCL=""
 	MITDEVICES=""
 fi
 
@@ -347,19 +350,20 @@ mips*) CFLAGS="$CFLAGS -signed -D_BSD_SIGNALS -KPIC";
        FEXECLIBDIR="-L";
        HUP_TO_INETD="kill -HUP \`ps -e | grep inetd | grep -v grep | awk '{print $1}'\`";
        SHARETYPE=".so";;
-sparc-sun-solaris2*)  
+*-solaris2*)  
        GROFF=nroff;
        GROFF_MAN_FLAGS="-t -man ";
        if test $SIZEOF_INT_P = 4; then CFLAGS="$CFLAGS -D_ILP32 "; else CFLAGS="$CFLAGS -D_LP64 "; fi;
        if test $CC = gcc; then
 	 LD=gcc;
 	 FORLD=gcc;
-         LINKSHARED="-Wl,-G -symbolic ";
+         LINKSHARED="-shared ";
          LD_LDSHARE="-Wl,-B,dynamic";
          LD_LDARC="-Wl,-B,static";
          LDSHARE="-Wl,-B,dynamic";
          LDARC="-Wl,-B,static";
-         CFLAGS="$CFLAGS -fPIC ";
+         CFLAGS="$CFLAGS -fPIC -D_POSIX_PTHREAD_SEMANTICS";
+         LDFLAGS="$CFLAGS";
        else 
          LINKSHARED="-G ";
          LD_LDARC="-B static ";
@@ -373,7 +377,12 @@ sparc-sun-solaris2*)
            CFLAGS="$CFLAGS -Kpic";
          fi;
        fi;
-       FFLAGS="$FFLAGS -PIC";
+       if test "$F77" = "gfortran"
+       then
+         FFLAGS="$FFLAGS -fPIC -fno-range-check"
+       else
+         FFLAGS="$FFLAGS -PIC";
+       fi
        IDL_LD="-L${IDL_DIR}/bin/bin.solaris2.sparc -lidl"
        LIBPATH="LD_LIBRARY_PATH";
        FEXECLIBDIR="-L";
@@ -591,9 +600,6 @@ alpha*-dec-osf*) CFLAGS="$CFLAGS -pthread -ieee";
        SHARETYPE=".so";;
 esac
 
-AC_CHECK_SIZEOF(int *)
-SIZEOF_INT_P=$ac_cv_sizeof_int_p
-
 dnl see if we have libdc1394 libraries and what version
 AC_CHECK_LIB(dc1394,dc1394_new ,dc1394_v2=yes)
 AC_CHECK_LIB(dc1394,dc1394_get_camera_info ,dc1394_v1=yes)
@@ -719,7 +725,7 @@ AC_ARG_ENABLE(staticmotif,
         fi)
   
 dnl Checks for header files.
-AC_CHECK_HEADERS(stdarg.h fcntl.h strings.h sys/ioctl.h syslog.h unistd.h sys/filio.h netdb.h resolv.h sys/types.h)
+AC_CHECK_HEADERS(stdarg.h fcntl.h strings.h sys/ioctl.h syslog.h unistd.h sys/filio.h netdb.h resolv.h sys/types.h linux/types.h drm/drm.h)
 AC_CHECK_HEADERS(dlfcn.h dl.h vxWorks.h windows.h sys/resource.h readline/readline.h)
 AC_CHECK_HEADERS(malloc.h)
 
@@ -915,11 +921,8 @@ then
 else
 	X_CFLAGS=-D_NO_DXm
 fi
-LDFLAGS="$X_LIBS"
 AC_CHECK_LIB(Xext,XextAddDisplay,LIBXEXT="-lXext",LIBXEXT="")
-LDFLAGS="$X_LIBS $LIBXEXT"
 AC_CHECK_LIB(Xp,XpGetDocumentData,LIBXP="-lXp",LIBXP="")
-LDFLAGS=""
 
 AC_DEFINE_UNQUOTED(TARGET_OS,${target_os})
 AC_DEFINE_UNQUOTED(TARGET_CPU,${target_cpu})
@@ -1002,6 +1005,7 @@ AC_SUBST(MOTIF_LDARC)
 AC_SUBST(MOTIF_LD_LDSHARE)
 AC_SUBST(MOTIF_LD_LDARC)
 AC_SUBST(NEED_SEMUN)
+AC_SUBST(NSLLIB)
 AC_SUBST(RANLIB)
 AC_SUBST(REMCAM)
 AC_SUBST(RMIC)
@@ -1009,6 +1013,7 @@ AC_SUBST(SHARETYPE)
 AC_SUBST(SHARETYPEJNI)
 AC_SUBST(SHARETYPEMOD)
 AC_SUBST(SIZEOF_INT_P)
+AC_SUBST(SOCKETLIB)
 AC_SUBST(SRBLIB)
 AC_SUBST(SRBINCLUDE)
 AC_SUBST(SYBASE_INC)
