--- a/math/Makefile.in
+++ b/math/Makefile.in
@@ -70,7 +70,7 @@ install:
 	$(INSTALL) -m 755  @MAKESHLIBDIR@libMdsMath@SHARETYPE@ @libdir@
 
 @MAKESHLIBDIR@libMdsMath@SHARETYPE@ : $(OBJECTS) 
-	$(LD) -o $@ @LINKSHARED@ $(OBJECTS) -L@MAKESHLIBDIR@ -lMdsShr @FOR_LDFLAGS@ $(LIBS)
+	$(LD) -o $@ @LINKSHARED@ $(OBJECTS) -L@MAKESHLIBDIR@ -lMdsShr @FOR_LDFLAGS@ $(LIBS) $(LDFLAGS)
 
 @MAKESHLIBDIR@ :
 	mkdir @MAKESHLIBDIR@
