--- a/mdsshr/Makefile.in
+++ b/mdsshr/Makefile.in
@@ -7,7 +7,7 @@ exec_prefix=@exec_prefix@
 RM=$(top_srcdir)/devscripts/rm_if
 CFLAGS=@CFLAGS@ @GLOBUS_CFLAGS@
 LDFLAGS=@LDFLAGS@
-LIBS=@LIBS@ -lrt @LIBDL@ @GCCLIB@
+LIBS=@LIBS@ -lrt @LIBDL@ @GCCLIB@ @SOCKETLIB@ @NSLLIB@
 INSTALL=@top_srcdir@/conf/install-sh -c
 
 SOURCES = \
@@ -56,7 +56,7 @@ install:
 	fi;
 
 @MAKESHLIBDIR@libMdsShr@SHARETYPE@ : $(OBJECTS) @EXPORTS_FILE@
-	$(LD) -o $@ @LINKSHARED@ $(OBJECTS) $(LIBS)
+	$(LD) -o $@ @LINKSHARED@ $(OBJECTS) $(LIBS) $(LDFLAGS)
 
 @MAKELIBDIR@libMdsShr.a : $(OBJECTS)
 	$(AR) -cr $@ $(OBJECTS)
