--- a/tdic/Makefile.in
+++ b/tdic/Makefile.in
@@ -41,7 +41,7 @@ install:
 	$(INSTALL) -m 755  @MAKEBINDIR@tdic @bindir@
 
 @MAKESHLIBDIR@libTdiShrExt@SHARETYPE@ : $(OBJECTS) @EXPORTS_FILE@
-	$(LD) -o $@ @LINKSHARED@ $(OBJECTS) $(LIBS)
+	$(LD) -o $@ @LINKSHARED@ $(OBJECTS) $(LIBS) $(LDFLAGS)
 
 @MAKELIBDIR@libTdiShrExt.a : $(OBJECTS)
 	$(AR) -cr $@ $(OBJECTS)
