--- a/treeshr/Makefile.in
+++ b/treeshr/Makefile.in
@@ -66,7 +66,7 @@ install:
 
 
 @MAKESHLIBDIR@libTreeShr@SHARETYPE@ : $(OBJECTS) @EXPORTS_FILE@ 
-	$(LD) -o $@ @LINKSHARED@ $(OBJECTS) $(LIBS)
+	$(LD) -o $@ @LINKSHARED@ $(OBJECTS) $(LIBS) $(LDFLAGS)
 
 @MAKELIBDIR@libTreeShr.a : $(OBJECTS)
 	$(AR) -cr $@ $(OBJECTS)
