--- a/xmdsshr/Makefile.in
+++ b/xmdsshr/Makefile.in
@@ -110,7 +110,7 @@ install:
 
 @MAKESHLIBDIR@libXmdsShr@SHARETYPE@ : $(OBJECTS)
 	- $(LD) -o $@ @LINKSHARED@ $(OBJECTS) \
-           -L@MAKESHLIBDIR@ -lMdsShr -lTdiShr -lTreeShr $(X_LIBS) $(MOTIF_LIBS) $(X_PRE_LIBS) -lXt -lX11 $(X_EXTRA_LIBS) $(LIBS)
+           -L@MAKESHLIBDIR@ -lMdsShr -lTdiShr -lTreeShr $(X_LIBS) $(MOTIF_LIBS) $(X_PRE_LIBS) -lXt -lX11 $(X_EXTRA_LIBS) $(LIBS) $(LDFLAGS)
 
 @MAKELIBDIR@libXmdsShr.a : $(OBJECTS)
 	$(AR) -cr $@ $(OBJECTS)
