--- a/configure.in
+++ b/configure.in
@@ -61,18 +61,6 @@ AC_ARG_ENABLE(camac,
 	[ --enable-camac        Build CAMAC and device libraries ],
 	camac_build="$enableval",
         camac_build="$camac_default")
-if test "$camac_build" = "yes"
-then
-	GEN_DEVICE="gen_device"
-	REMCAM="remcam"
-	CCL="ccl"
-	MITDEVICES="mitdevices"
-else
-	GEN_DEVICE=""
-	REMCAM=""
-	CCL=""
-	MITDEVICES=""
-fi
 
 AC_ARG_ENABLE(java,
 	[ --disable-java	do not build java libraries and applications],
@@ -286,7 +274,6 @@ IDL_LD=""
 MDSVME=""
 LOC="%loc"
 VAL="%val"
-CAMSHR=""
 
 CFLAGS="$CFLAGS $GCCPROF $MEMCHK -I\$(top_srcdir)/include"
 FFLAGS="$FFLAGS  -I\$(top_srcdir)/include"
@@ -450,7 +437,6 @@ alpha*-dec-osf*) CFLAGS="$CFLAGS -pthread -ieee";
        else
            JVM="-L$jdk_dir/jre/lib/i386/client -ljvm -L$jdk_dir/jre/lib/i386  -ljava -L$jdk_dir/jre/lib/i386/native_threads -lhpi";
        fi
-       CAMSHR="camshr";
        if (test "$F77" = "g77"); then
          FFLAGS="$FFLAGS -Wno-globals"
          LOC="%loc"
@@ -479,7 +465,6 @@ alpha*-dec-osf*) CFLAGS="$CFLAGS -pthread -ieee";
        HUP_TO_XINETD="/etc/rc.d/init.d/xinetd restart";
        HUP_TO_INETD="kill -HUP \`/sbin/pidof inetd\`";;
 *linux*) CFLAGS="$CFLAGS -fpic -shared-libgcc -fno-strict-aliasing";
-       CAMSHR="camshr";
        if (test "$F77" = "g77"); then
          FFLAGS="$FFLAGS -Wno-globals"
          FOR_LDFLAGS="-lg2c"
@@ -729,6 +714,30 @@ AC_CHECK_HEADERS(stdarg.h fcntl.h strings.h sys/ioctl.h syslog.h unistd.h sys/fi
 AC_CHECK_HEADERS(dlfcn.h dl.h vxWorks.h windows.h sys/resource.h readline/readline.h)
 AC_CHECK_HEADERS(malloc.h)
 
+
+if test "$camac_build" = "yes"
+then
+  GEN_DEVICE="gen_device"
+  REMCAM="remcam"
+  CCL="ccl"
+  MITDEVICES="mitdevices"
+  AC_CHECK_HEADERS(scsi/sg.h,DO_CAMSHR="yes",DO_CAMSHR="no")
+  if test "$DO_CAMSHR" = yes
+  then
+    CAMSHR="camshr"
+    REMCAMLIB="RemCamShr"
+  else
+    CAMAC=""
+    REMCAMLIB="CamShr"
+  fi
+else
+  GEN_DEVICE=""
+  REMCAM=""
+  CCL=""
+  MITDEVICES=""
+  CAMSHR=""
+fi
+
 dnl Check for default hdf5 header and library
 HDF5_APS=""
 AC_CHECK_HEADERS(hdf5.h,DO_HDF5="yes")
@@ -929,7 +938,6 @@ AC_DEFINE_UNQUOTED(TARGET_CPU,${target_cpu})
 AC_DEFINE_UNQUOTED(TARGET_VENDOR,${target_vendor})
 
 LIBS="$LIBPTHREAD $LIBS"
-AC_SUBST(CAMSHR)
 AC_SUBST(CC_LDFLAGS)
 AC_SUBST(CCL)
 AC_SUBST(D3D_PACKAGE)
@@ -1008,6 +1016,7 @@ AC_SUBST(NEED_SEMUN)
 AC_SUBST(NSLLIB)
 AC_SUBST(RANLIB)
 AC_SUBST(REMCAM)
+AC_SUBST(REMCAMLIB)
 AC_SUBST(RMIC)
 AC_SUBST(SHARETYPE)
 AC_SUBST(SHARETYPEJNI)
