Fix camshr rule

--- a/configure.in
+++ b/configure.in
@@ -938,6 +938,7 @@ AC_DEFINE_UNQUOTED(TARGET_CPU,${target_cpu})
 AC_DEFINE_UNQUOTED(TARGET_VENDOR,${target_vendor})
 
 LIBS="$LIBPTHREAD $LIBS"
+AC_SUBST(CAMSHR)
 AC_SUBST(CC_LDFLAGS)
 AC_SUBST(CCL)
 AC_SUBST(D3D_PACKAGE)
