--- a/configure.in
+++ b/configure.in
@@ -375,8 +375,8 @@ mips*) CFLAGS="$CFLAGS -signed -D_BSD_SIGNALS -KPIC";
        FEXECLIBDIR="-L";
        SHARETYPE=".so";
        JVM="";
-       jni_inc_dir="/usr/java/include";
-       jni_md_inc_dir="/usr/java/include/solaris";
+       jni_inc_dir="${JDK_DIR}/include";
+       jni_md_inc_dir="${JDK_DIR}/include/solaris";
        HUP_TO_INETD="kill -HUP \`ps -e -o pid -o command | grep /usr/sbin/inetd | grep -v grep | awk '{print $1}'\`";;
 alpha*-dec-osf*) CFLAGS="$CFLAGS -pthread -ieee";
        FFLAGS="$FFLAGS -pthread";
