--- a/mdstcpip/Makefile.in
+++ b/mdstcpip/Makefile.in
@@ -12,9 +12,9 @@ top_srcdir=@top_srcdir@
 RM=$(top_srcdir)/devscripts/rm_if
 prefix=@prefix@
 exec_prefix=@exec_prefix@
-CFLAGS=@CFLAGS@ $(COMPRESSION_SWITCH) @GLOBUS_CFLAGS@
+CFLAGS=@CFLAGS@ $(COMPRESSION_SWITCH)
 LDFLAGS=@LDFLAGS@
-LIBS=@GLOBUS_LIBS@ @LIBS@ @LIBSOCKET@ @LIBNSL@ @LIBRESOLV@ @MEMCHKLIB@
+LIBS=@LIBS@ @LIBSOCKET@ @LIBNSL@ @LIBRESOLV@ @MEMCHKLIB@
 INSTALL=@top_srcdir@/conf/install-sh -c
 
 ifeq "@SHARETYPEMOD@" "@SHARETYPE@"
@@ -55,8 +55,7 @@ ifneq "@GLOBUS_FLAVOR@" ""
 
 MdsIpGSI = @MAKESHLIBDIR@libMdsIpGSI@SHARETYPE@
 ALL_SOURCES = $(ALL_SOURCES) $(GSI_SOURCES)
-CLEAN_OBJECTS = $(COMPRESSION_OBJECTS) $(LIB_OBJECTS) $(TUNNEL_OBJECTS) $(TCP_OBJECTS) $(SERVER_LIB_OBJECTS) $(SERVER_OBJECTS) IoRoutinesGsi.o makefile-header
-MAKEFILE_HEADER = makefile-header
+CLEAN_OBJECTS = $(COMPRESSION_OBJECTS) $(LIB_OBJECTS) $(TUNNEL_OBJECTS) $(TCP_OBJECTS) $(SERVER_LIB_OBJECTS) $(SERVER_OBJECTS) IoRoutinesGsi.o 
 MDSIPSD = @MAKEBINDIR@mdsipsd
 
 endif
@@ -235,15 +234,15 @@ $(MDSIP_UTIL) : mdsiputil.o mdsip_socket_io.o mdsip_parallel.o $(COMPRESSION_OBJ
 @MAKEBINDIR@mdsip-server-ssh : mdsip-server-ssh
 	cp mdsip-server-ssh $@
 
-makefile-header:  
-	GLOBUS_LOCATION=@GLOBUS_LOCATION@; $$GLOBUS_LOCATION/bin/globus-makefile-header --flavor=@GLOBUS_FLAVOR@pthr globus_xio globus_xio_gsi_driver > makefile-header
+#makefile-header:  
+#	GLOBUS_LOCATION=@GLOBUS_LOCATION@; $$GLOBUS_LOCATION/bin/globus-makefile-header --flavor=@GLOBUS_FLAVOR@pthr globus_xio globus_xio_gsi_driver > makefile-header
 
 ifdef MdsIpGSI
 
-include makefile-header
+#include makefile-header
 
 $(MdsIpGSI) :  IoRoutinesGsi.c
-	$(GLOBUS_CC) -o $@ IoRoutinesGsi.c @CFLAGS@ $(GLOBUS_CFLAGS) $(GLOBUS_INCLUDES) -I$(top_srcdir)/include  @LINKSHARED@ $(GLOBUS_LDFLAGS) $(GLOBUS_LIBS) $(GLOBUS_PKG_LIBS) -L@MAKESHLIBDIR@ -lMdsIpShr
+	$(CC) -o $@ IoRoutinesGsi.c @CFLAGS@ $$(pkg-config --cflags globus-xio) -I$(top_srcdir)/include  @LINKSHARED -L@MAKESHLIBDIR@ -lMdsIpShr
 
 @MAKEBINDIR@mdsipsd : mdsipsd
 	cp mdsipsd $@
