--- a/roam/Makefile.in
+++ b/roam/Makefile.in
@@ -1,10 +1,8 @@
-include makefile-header
-
 top_srcdir=@top_srcdir@
 RM=$(top_srcdir)/devscripts/rm_if
 SHELL=/bin/sh
-CFLAGS = @CFLAGS@ $(GLOBUS_CFLAGS) $(GLOBUS_INCLUDES) -I$(top_srcdir)/include
-LDFLAGS = $(GLOBUS_LDFLAGS) $(GLOBUS_LIBS) $(GLOBUS_PKG_LIBS) -L@MAKESHLIBDIR@ -lMdsShr -lTdiShr -lcurl -lc
+CFLAGS = @CFLAGS@ $$(pkg-config --cflags globus-xio globus-gridmap-callout-error) -I$(top_srcdir)/include
+LDFLAGS = $(LDFLAGS) $$(pkg-config --libs globus-xio globus-gridmap-callout-error) -L@MAKESHLIBDIR@ -lMdsShr -lTdiShr -lcurl -lc
 EXPORTS = mdsipshr.export
 INSTALL=@top_srcdir@/conf/install-sh -c
 prefix=@prefix@
@@ -64,7 +62,7 @@ install:
 	fi;
 
 @MAKESHLIBDIR@libRoam_@GLOBUS_FLAVOR@@SHARETYPE@ : $(OBJECTS)
-	$(GLOBUS_CC) -o $@ @LINKSHARED@ $(OBJECTS) $(CFLAGS) $(LDFLAGS)
+	$(CC) -o $@ @LINKSHARED@ $(OBJECTS) $(CFLAGS) $(LDFLAGS)
 
 @MAKESHLIBDIR@libRoam@SHARETYPE@ :
 	ln -sf libRoam_@GLOBUS_FLAVOR@@SHARETYPE@ @MAKESHLIBDIR@libRoam@SHARETYPE@
@@ -81,7 +79,7 @@ makefile-header:
 
 ifdef modules
 @MAKESHLIBDIR@libRoam_@GLOBUS_FLAVOR@@SHARETYPEMOD@ : $(OBJECTS)
-	$(GLOBUS_LD) -o $@ @LINKMODULE@ $(OBJECTS) $(LIBS) 
+	$(LD) -o $@ @LINKMODULE@ $(OBJECTS) $(LIBS) 
 endif
 
 @MAKELIBDIR@ :
