--- a/roam/Makefile.in
+++ b/roam/Makefile.in
@@ -2,7 +2,7 @@ top_srcdir=@top_srcdir@
 RM=$(top_srcdir)/devscripts/rm_if
 SHELL=/bin/sh
 CFLAGS = @CFLAGS@ $$(pkg-config --cflags globus-xio globus-gridmap-callout-error) -I$(top_srcdir)/include
-LDFLAGS = $(LDFLAGS) $$(pkg-config --libs globus-xio globus-gridmap-callout-error) -L@MAKESHLIBDIR@ -lMdsShr -lTdiShr -lcurl -lc
+LDFLAGS = @LDFLAGS@ $$(pkg-config --libs globus-xio globus-gridmap-callout-error) -L@MAKESHLIBDIR@ -lMdsShr -lTdiShr -lcurl -lc
 EXPORTS = mdsipshr.export
 INSTALL=@top_srcdir@/conf/install-sh -c
 prefix=@prefix@
