--- a/include/config.h.in
+++ b/include/config.h.in
@@ -75,6 +75,9 @@
 /* Define if you have the gettimeofday function.  */
 #undef HAVE_GETTIMEOFDAY
 
+/* Define if you have the clock_gettime function. */
+#undef HAVE_CLOCK_GETTIME
+
 /* Define if you have the select function.  */
 #undef HAVE_SELECT
 
