--- a/mdsshr/Makefile.in
+++ b/mdsshr/Makefile.in
@@ -7,7 +7,7 @@ exec_prefix=@exec_prefix@
 RM=$(top_srcdir)/devscripts/rm_if
 CFLAGS=@CFLAGS@ @GLOBUS_CFLAGS@
 LDFLAGS=@LDFLAGS@
-LIBS=@LIBS@ -lrt @LIBDL@ @GCCLIB@ @SOCKETLIB@ @NSLLIB@
+LIBS=@LIBS@ @CLOCK_GETTIME_LIB@ @LIBDL@ @GCCLIB@ @SOCKETLIB@ @NSLLIB@
 INSTALL=@top_srcdir@/conf/install-sh -c
 
 SOURCES = \
