Do not build rtevents and cacheshr on Mac

--- a/Makefile.in
+++ b/Makefile.in
@@ -30,8 +30,7 @@ PARTS = \
         tditest \
 	xtreeshr \
         @MDSTCPIP@ \
-	rtevents \
-        cacheshr \
+	@RTEVENTS@ \
         mdslibidl \
         cdu     \
         mdsdcl  \
