Do not build rtevents and cacheshr on Mac

--- a/configure.in
+++ b/configure.in
@@ -1014,7 +1014,7 @@ AC_SUBST(RANLIB)
 AC_SUBST(REMCAM)
 AC_SUBST(REMCAMLIB)
 AC_SUBST(RMIC)
-AC_SUNST(RTEVENTS)
+AC_SUBST(RTEVENTS)
 AC_SUBST(SHARETYPE)
 AC_SUBST(SHARETYPEJNI)
 AC_SUBST(SHARETYPEMOD)
