--- a/javadevices/Makefile.in
+++ b/javadevices/Makefile.in
@@ -127,6 +127,7 @@ MARTE_MHD_BRSetup.java\
 MARTE_MHD_CTRLSetup.java\
 MARTE_MHD_ISetup.java\
 MARTE_MHD_BTSetup.java\
+MARTE_DEQUSetup.java\
 LASER_YAGSetup.java\
 SPIDER_SMSetup.java\
 SPIDERSetup.java\
